--- a/Session5/myapp/src/app/binding/binding.component.html
+++ b/Session5/myapp/src/app/binding/binding.component.html
@@ -1,3 +1,5 @@
+<hr>
+<h1>Data Binding</h1>
 <h2>Viewing Table of Products</h2>
 <br>
 
@@ -20,3 +22,11 @@
         </tr>
     </tbody>
 </table>
+
+<hr>
+<br>
+<h2>Bind the data from source to view using Interpolation</h2>
+<p>{{name}}</p>
+<br>
+<h2>Bind the data from source to view using Property Binding:[]</h2>
+<a [href]="url">Redirect to Google.com</a>
