--- a/Session5/myapp/src/app/binding/binding.component.html
+++ b/Session5/myapp/src/app/binding/binding.component.html
@@ -6,7 +6,7 @@
 
 <table class="table table-striped table-bordered">
     <thead>
-        <tr>
+        <tr [class.inStock]="true"> <!--Class Binding: 'inStock' is class which is prepared inside 'binding.component.css' file...-->
             <th>Product Name</th>
             <th>Price</th>
             <th>Availability</th>
@@ -27,7 +27,7 @@
 <hr>
 <br>
 <h2>Bind the data from source to view using Interpolation</h2>
-<p>{{name}}</p>
+<p>{{name}}</p> 
 <br>
 <h2>Bind the data from source to view using Property Binding:[]</h2>
 <a [href]="url">Redirect to Google.com</a>
