Interpolation Binding, Property Binding'[]'

--- a/Session5/myapp/src/app/binding/binding.component.html
+++ b/Session5/myapp/src/app/binding/binding.component.html
@@ -27,7 +27,7 @@
 <hr>
 <br>
 <h2>Bind the data from source to view using Interpolation</h2>
-<p>{{name}}</p> 
+<p>{{name}}</p> <!--Interpolation Binding: '{{}}'-->
 <br>
 <h2>Bind the data from source to view using Property Binding:[]</h2>
-<a [href]="url">Redirect to Google.com</a>
+<a [href]="url">Redirect to Google.com</a> <!--Property Binding: '[]'-->
