Interpolation Binding, Property Binding'[]', Class Binding, Style Binding

--- a/Session5/myapp/src/app/binding/binding.component.html
+++ b/Session5/myapp/src/app/binding/binding.component.html
@@ -16,7 +16,7 @@
     <tbody>
         <!--NgDirective eg: *ngFor-->
         <tr *ngFor="let p of products">
-            <td>{{p.name}}</td>
+            <td [style.font-weight]="we">{{p.name}}</td> <!--Style Binding-->
             <td>{{p.price}}</td>
             <td>{{p.available}}</td>
             <td>{{p.ratings}}</td>
