--- a/Session5/myapp/src/app/binding/binding.component.html
+++ b/Session5/myapp/src/app/binding/binding.component.html
@@ -35,7 +35,7 @@
 <br>
 
 <hr>
-<div class="container">
+<div class="container"> <!--Event Binding-->
     <h3>This is the example of Event Binding</h3>
     <br>
     <button class="btn btn-primary" (click)="show()">Show Div</button>
