--- a/Session5/parent/src/app/app.component.html
+++ b/Session5/parent/src/app/app.component.html
@@ -5,4 +5,9 @@
 <!--Parent to child communication-->
 <input type="text" (keyup)="0" #ptext>
 
-<app-child [pdata]="ptext.value"></app-child>
+<!-- <app-child [pdata]="ptext.value"></app-child> -->
+
+<!--Child to parent communication-->
+<p>Value coming from child:<b>{{cdata}}</b></p>
+
+<app-child [pdata]="ptext.value" (cevent)="cdata=$event"></app-child>
