--- a/Session5/parent/src/app/child/child.component.html
+++ b/Session5/parent/src/app/child/child.component.html
@@ -1,3 +1,7 @@
 <p>child works!</p>
 
 <p>Value coming from Parent Component: <b>{{pdata}}</b></p>
+
+<hr>
+<br>
+<input type="text" #cdata (keyup)="onChange(cdata.value)">
